<?xml version="1.0"?>
<package>
  <name>haros</name>
  <version>0.1.5</version>
  <description>
    Static analysis framework for ROS

    Run various linters, compute metrics, and generate a report on the packages
    analyzed.
  </description>
  <license>MIT</license>
  <maintainer email="andre.f.santos@inesctec.pt">Andre Santos</maintainer>
  <author>Andre Santos</author>

  <url type="repository">https://github.com/git-afsantos/haros.git</url>
  <url type="bugtracker">https://github.com/git-afsantos/haros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_pip</buildtool_depend>

  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>python-yaml</build_depend>
  <run_depend>python-pip</run_depend>
  <run_depend>cppcheck</run_depend>
  <!-- todo still need rosdep entries for radon and lizard apparently -->
</package>
